[gd_scene load_steps=4 format=2]

[ext_resource path="res://Trabalho/Assets/Naves/enemyBlack2.png" type="Texture" id=1]
[ext_resource path="res://Trabalho/Scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://Trabalho/cenas/LazerE.tscn" type="PackedScene" id=3]

[node name="enemy" type="Node2D"]
position = Vector2( 255, 106 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Blaster" type="Position2D" parent="."]
position = Vector2( 0, 36 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -7, 40, -23, 40, -51, -9, -51, -16, -35, -16, -19, -30, -19, -33, 0, -42, 17, -33, 20, -27, 34, -15, 50, -15, 51, -8, 23, 41, 7, 41, 10, 23, 7, 26, -7, 25, -9, 23 )

[node name="LazerE" parent="." instance=ExtResource( 3 )]

[node name="lazertimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="lazertimer" to="." method="_on_lazertimer_timeout"]
